styles.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-family: "Ubuntu", Helvetica, Arial, sans-serif;
}

h1,
h2,
h3,
p {
  padding: 1em;
}
/** Body **/
.header {
  margin-bottom: 1em;
  display: flex;
  justify-content: space-between;
  top: 0px;
  position: sticky;
  background: white;
}

.header img {
  max-width: 200px;
  max-height: 200px;
}

.header-menu {
  margin-top: 15px;
}

.header-menu > li {
  display: inline;
  margin-right: 50px;
}

.dropdown:hover .header-navigation {
  display: flex;
  flex-direction: column;
  border-radius: 5px;
  padding-top: 60px;
  background-color: grey;

  position: absolute;
  top: 0px;
  right: 0px;
  z-index: 1;
}

.header-navigation {
  display: none;
}

.header-navigation li {
  list-style: none;
  border-bottom: 1px solid #FFF;
  padding: 0 40px 10px 20px;
  margin: 10px;
}
.dropdown > span {
  z-index: 2;
  position: relative;
}

.mid-screen {
  color: white;
  background-color: #5e5e5e;
  padding: 0 0 2em 0;
}

.mid-screen h1 {
  font-size: 2em;
  padding: 1em 0 3em 0;
  text-align: center;
  text-transform: uppercase;
}

.mid-screen h2 {
  font-size: 1em;
  text-align: center;
  text-transform: uppercase;
  padding-bottom: 3em;
}

.when-where-sections {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 75%;
}

.when-where-sections section {
  display: block;
  width: 90%;
  max-width: 500px;
  background: #75828d;
  padding: 1em;
  margin-bottom: 1em;
}

.when-where-sections section img {
  float: left;
  padding-right: 1em;
}

.more-info p {
  padding: 1em;
}

.more-info p:first-child {
  font-size: 18px;
  color: grey;
  padding-top: 2em;
  padding-bottom: 2em;
}

.connect-box {
  background: #24648b;
  font-size: 1em;
  color: white;
  padding: 1em;
  text-align: center;
  width: 90%;
  margin: 0 auto;
}

.connect-box h1 {
  font-size: 1.5em;
  text-transform: uppercase;
}

.connect-icons {
  list-style-type: none;
  display: flex;
  justify-content: center;
  padding: 1em;
  width: 100%;
}

.connect-icons li a img {
  padding: 1em;
  width: 1em;
  height: 1em;
}

.sponsors-box h1 {
  font-size: 1.5em;
  padding: 1em 0 0 1em;
  text-transform: uppercase;
}

.sponsors-box h2 {
  color: gray;
  font-size: 1em;
  padding: 1em 0 0 2em;
}

.sponsors-box h3 {
  text-transform: uppercase;
  font-size: 1em;
}

.sponsors-box ul li {
  text-align: center;
  padding: 1em 0;
}

.footer {
  margin-top: 2em;
  background-color: #3b3b3b;
  color: white;
  padding: 1em;
  font-size: 12px;
}

.footer a {
  text-decoration: none;
  color: grey;
}
.footer-connect {
  display: flex;
}

.footer-connect li {
  padding: 1em;
}

.footer-connect img {
  max-width: 30px;
  max-height: 30px;
}

.join-sponsor {
  text-decoration: none;
  font-size: .75em;
  font-weight: bold;
  text-transform: uppercase;
  color: white;
  display: block;
  background-color: #24648c;
  padding: 1.5em;
  margin: 1em auto 1em;
  width: 60%;
  text-align: center;
}

img {
  max-width: 400px;
  max-height: 300px;
}

ul {
  list-style-type: none;
}

@media screen and (max-width: 499px) {
  .join-sponsor:first-of-type {
    display: none;
  }

  .join-sponsor:last-of-type {
    display: block;
  }
}
@media screen and (min-width: 500px) {
  .mid-screen {
    background-image: url('https://cposc.org/wp-content/uploads/2018/02/homepage-hero.jpg');
  }

  .when-where-sections {
    margin: 0 auto;
  }

  .join-sponsor:first-of-type {
    display: block;
    width: 30%;
    position: relative;
    left: 20em;
    top: -5em;
  }

  .join-sponsor:last-of-type {
    display: none;
  }
}

@media screen and (min-width: 1000px) {
  .when-where-sections {
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
  }

  .when-where-sections section {
    margin-right: 1em;
  }
}

